@startuml
title Online Registration Entity Relationship Diagram
'hide the spot
hide circle

!global $DARK_BLUE = "#094785"
!global $MEDIUM_GREY = "#5E5F60"
!global $DARK_GREY = "#44546A"
!global $AMBER = "#f7dd90"
'avoid problems with angled crows feet
skinparam linetype ortho


<style>
  class {
    RoundCorner 15
    LineColor $DARK_BLUE
    FontColor $DARK_BLUE
    BackgroundColor #fcf6e4
    FontSize 12
    AttributeFontColor $DARK_GREY
  }

  arrow {
    LineColor $MEDIUM_GREY
    FontColor $MEDIUM_GREY
    FontSize 12
  }

  note {
    LineColor $DARK_GREY
    FontColor #111111
    BackgroundColor $AMBER
    FontSize 12
    AttributeFontColor $DARK_GREY
  }
</style>


entity reg_con_info {
* id : INT <<auto_increment>>
--
* name : VARCHAR(90)
* perennial_con_id : int
* header_img_name : VARCHAR(90)
* active_from_time : TIMESTAMP
* active_to_time : TIMESTAMP
* reg_open_time : TIMESTAMP
* reg_close_time : TIMESTAMP
* con_start_date : DATE
* con_end_date : DATE
}

entity reg_perennial_con_info {
* id : INT <<auto_increment>>
--
* name : VARCHAR(90)
* website_url: varchar(255)
}

entity reg_offering {
* id : INT <<auto_increment>>
--
* sort_order: INT
* title : varchar(90)
* con_id : INT
* start_time : TIMESTAMP
* end_time : TIMESTAMP
  minimum_price : numeric(13,2)
* suggested_price : numeric(13,2)
  maximum_price : numeric(13,2)
* description: varchar(1024)
* is_membership: char(1)
* add_prompts: char(1)
* emphasis: char(1)
* email_required: varchar(16)
* is_donation: char(1)
}

entity reg_offering_highlight {
* offering_id: INT
* sort_order: INT
--
* highlight_text: varchar(1024)
}

entity reg_order {
* id : INT <<auto_increment>>
--
* con_id: INT
* uuid: varchar(36)
* status: varchar(32)
* creation_date: TIMESTAMP
* last_modified_date: TIMESTAMP
  payment_method: varchar(32)
}

entity reg_order_item {
* id : INT <<auto_increment>>
--
* order_id : INT
* offering_id : INT
* amount: numeric(13,2)
* name: varchar(255)
  email: varchar(255)
  street_line_1: varchar(255)
  street_line_2: varchar(255)
  city: varchar(255)
  state_or_province: varchar(255)
  zip_or_postal_code: varchar(255)
  country: varchar(255)
  age: varchar(255)
}

entity reg_quantity_pool {
* id : INT <<auto_increment>>
--
* quantity : INT
}

entity reg_admin_user {
* id : INT <<auto_increment>>
--
* name : varchar(255)
* password : varchar(255)
}
note bottom: reg_admin_user is really a view on\nZambia's Participant and CongoDump tables

reg_con_info }|-right-|| reg_perennial_con_info : perennial_con_id
reg_order ||-left-o{ reg_order_item : order_id
reg_order_item }o--|| reg_offering : offering_id
reg_offering }|--|| reg_con_info : con_id
reg_offering ||-right-o{ reg_offering_highlight : offering_id
reg_offering }o-left-|| reg_quantity_pool : quantity_pool_id
@enduml